kubernetes/media/lazylibrarian/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lazylibrarian
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lazylibrarian-k8s.home.mcnees.me`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy
          namespace: auth
      services:
        - name: lazylibrarian
          port: 5299
  tls:
    secretName: legacy-home-wildcard-tls
